Update .gitignore for Eclipse and Mule files
Added rules to ignore Eclipse project files, Mule runtime directories, and bin folders to prevent IDE and runtime artifacts from being tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,16 @@ RemoteSystemsTempFiles/
 target/
 **/target/
 
+# Eclipse / Anypoint project files
+.project
+.classpath
+.settings/
+
+# Mule runtime and tooling
+.mule/
+bin/
+**/bin/
+
 # OS files
 .DS_Store
 Thumbs.db
