--- a/xapi-greenfleet-accounts-maintenance/pom.xml
+++ b/xapi-greenfleet-accounts-maintenance/pom.xml
@@ -53,10 +53,22 @@
 			<classifier>raml</classifier>
 			<type>zip</type>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-apikit-module</artifactId>
+			<version>1.11.10</version>
+			<classifier>mule-plugin</classifier>
+		</dependency> -->
 		<dependency>
 			<groupId>org.mule.modules</groupId>
 			<artifactId>mule-apikit-module</artifactId>
 			<version>1.11.10</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-validation-module</artifactId>
+			<version>2.0.8</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
