--- a/papi-greenfleet-accounts-maintenance/pom.xml
+++ b/papi-greenfleet-accounts-maintenance/pom.xml
@@ -52,6 +52,13 @@
 			<version>1.11.10</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
+		<dependency>
+			<groupId>8447f95a-7ec8-4e54-affa-1ffc93d1beaf</groupId>
+			<artifactId>papi-greenfleet-accounts-maintenance</artifactId>
+			<version>1.0.2</version>
+			<classifier>raml</classifier>
+			<type>zip</type>
+		</dependency>
 	</dependencies>
 
 	<repositories>
